test/libsolidity/syntaxTests/stdlib/invalid_evm_version.sol
pragma stdlib;
// ====
// EVMVersion: <constantinople
// ----
// SyntaxError 6634: (0-14): "pragma stdlib" requires Constantinople EVM version at the minimum.
